@@ -210,7 +210,7 @@ class MessageWin : public MainWindowBase
         QCheckBox*          mDontShowAgainCheck;
         EditAlarmDlg*       mEditDlg;         // alarm edit dialog invoked by Edit button
         DeferAlarmDlg*      mDeferDlg;
-        QDateTime           mDeferLimit;      // last time to which the message can currently be deferred
+        QDateTime           mDeferLimit;      // last UTC time to which the message can currently be deferred
         int                 mButtonDelay;     // delay (ms) after window is shown before buttons are enabled
         int                 mScreenNumber;    // screen to display on, or -1 for default
         bool                mAlwaysHide;      // the window should never be displayed
