@@ -3,6 +3,7 @@ KAlarm Change Log
 === Version 2.10.5 --- 3 August 2013 ===
 - Fix memory leak whenever the edit dialogue is closed.
 - Fix auto-close alarms not displaying when KAlarm defaults to UTC time zone.
+- Fix display alarm deferral limit when KAlarm defaults to UTC time zone.
 
 === Version 2.10.4 (KDE 4.11 beta2) --- 15 June 2013 ===
 - Show startup warning if no writable active alarm calendar is enabled [KDE Bug 316338]
